Changes for 1.5.1
* Fixing Chat Panel player name area to be correct size to hold all player names and national flags. (frigoref)

* Adding Alpha+3 National Objectives to xml. (veqryn)

* Added "originalNoWater" as an option for conditions that test territories. (veqryn)

* Fixed bug where paratroopers could not move over enemy sea zones or captured sea zones. (veqryn)

* Fixed bug with moving sea units through sea units belonging to a power not yet at war with. Also possibly fixed bug with Easy AI's comparison method contract. (veqryn)

* Adding Global 1940 alpha 3 as test xml. (veqryn)

* Fixing bug where the neutral (null) player might be asked if it wants to scramble, which gives an error. (veqryn)

* Adding Play-By-Forum method for TripleA War Club, http://www.tripleawarclub.org/  so that people can also play there. (qwertgold)

* Fixing Battle Calc to not include units that are irrelevant to combat. (veqryn)

* Made sure all m_variable types in attachments exactly match the new instance type that is used. This, combined with the previous 2 changes, should fix the history panel bugs that are being caused by not being able to find the correct setter. (veqryn)

* Changing the way the ChangeFactory uses PropertyUtil for getting the old value of properties. Previously relied on the "get" method for getting the old value. Now it will directly access and store the "m_" object. getRawProperty no longer used. (veqryn)

* Allowed changes to all attachments to be undone and redone in the history panel, by ensuring each setter has an additional setter for an object of the field's type. (veqryn)

* Preventing history panel from updating if moused over, and allowing it to scroll down if not. (frigoref & veqryn)

* Allowing route to recalculate if only air can make it. (frigoref)

* More optimizations of getBestRoute. Also changing "Parse Selected" to be default parsing strategy of maps. (veqryn)
