@@ -54,7 +54,7 @@ public interface IAttachment extends Serializable
 	/* SLIDINGTILES
 	// Tile attachment
 	final static String PROPERTY_SLIDINGTILES_Tile_value = "value"; */
-	
+
 	/* KINGSTABLE
 	// PlayerAttachment
 	final static String PROPERTY_KINGSTABLE_NEEDS_KING = "needsKing";
@@ -62,7 +62,7 @@ public interface IAttachment extends Serializable
 	// TerritoryAttachment
 	static final String PROPERTY_KINGSTABLE_KINGS_EXIT = "kingsExit";
 	static final String PROPERTY_KINGSTABLE_KINGS_SQUARE = "kingsSquare"; */
-	
+
 	/* TRIPLEA
 	// PlayerAttachment
 	static final String PROPERTY_PlayerAttachment_DESTROY_PUS = "destroysPUs";
@@ -244,6 +244,7 @@ public interface IAttachment extends Serializable
 	static final String PROPERTY_RelationshipTypeAttachment_HELPS_DEFEND_AT_SEA = "helpsDefendAtSea";
 	static final String PROPERTY_RelationshipTypeAttachment_IS_DEFAULT_WAR_POSITION = "isDefaultWarPosition";
 	static final String PROPERTY_RelationshipTypeAttachment_UP_KEEP_COST = "upkeepCost";
+	static final String PROPERTY_RelationshipTypeAttachment_CAN_MOVE_INTO_DURING_COMBAT_MOVE = "canMoveIntoDuringCombatMove";
 	
 	// AbstractPlayerRulesAttachment
 	static final String PROPERTY_AbstractPlayerRulesAttachment_DOMINATING_FIRST_ROUND_ATTACK = "dominatingFirstRoundAttack";
