@@ -56,6 +56,7 @@ public class RelationshipTypeAttachment extends DefaultAttachment
 	private String m_canLandAirUnitsOnOwnedLand = PROPERTY_DEFAULT;
 	private String m_canTakeOverOwnedTerritory = PROPERTY_DEFAULT;
 	private String m_givesBackOriginalTerritories = PROPERTY_DEFAULT;
+	private String m_canMoveIntoDuringCombatMove = PROPERTY_DEFAULT;
 	
 	/**
 	 * Creates new RelationshipTypeAttachment
@@ -280,6 +281,22 @@ public class RelationshipTypeAttachment extends DefaultAttachment
 		if (m_givesBackOriginalTerritories.equals(PROPERTY_DEFAULT))
 			return false;
 		return m_givesBackOriginalTerritories.equals(PROPERTY_TRUE);
+	}
+	
+	@GameProperty(xmlProperty = true, gameProperty = true, adds = false)
+	public void setCanMoveIntoDuringCombatMove(final String value) throws GameParseException
+	{
+		if (!(value.equals(PROPERTY_DEFAULT) || value.equals(PROPERTY_FALSE) || value.equals(PROPERTY_TRUE)))
+			throw new GameParseException("canMoveIntoDuringCombatMove must be either " + PROPERTY_DEFAULT + " or " + PROPERTY_FALSE + " or " + PROPERTY_TRUE + thisErrorMsg());
+		m_canMoveIntoDuringCombatMove = value;
+	}
+	
+	public boolean getCanMoveIntoDuringCombatMove()
+	{
+		// this property is not affected by any archetype.
+		if (m_canMoveIntoDuringCombatMove.equals(PROPERTY_DEFAULT))
+			return true;
+		return m_canMoveIntoDuringCombatMove.equals(PROPERTY_TRUE);
 	}
 	
 	/**
